@@ -1,14 +1,10 @@
-/* mpn_sec_div_qr, mpn_sec_div_r -- Compute Q = floor(U / V), U = U mod
-   V.  Side-channel silent under the assumption that the used instructions are
+/* mpn_sec_div_qr, mpn_sec_div_r -- Compute Q = floor(U / V), U = U mod V.
+   Side-channel silent under the assumption that the used instructions are
    side-channel silent.
 
    Contributed to the GNU project by Torbjörn Granlund.
 
-   THE FUNCTIONS IN THIS FILE ARE INTERNAL WITH MUTABLE INTERFACES.  IT IS ONLY
-   SAFE TO REACH THEM THROUGH DOCUMENTED INTERFACES.  IN FACT, IT IS ALMOST
-   GUARANTEED THAT THEY WILL CHANGE OR DISAPPEAR IN A FUTURE GNU MP RELEASE.
-
-Copyright 2011-2013 Free Software Foundation, Inc.
+Copyright 2011-2014 Free Software Foundation, Inc.
 
 This file is part of the GNU MP Library.
 
@@ -33,11 +29,13 @@ with the GNU MP Library.  If not, see https://www.gnu.org/licenses/.  */
 #define FNAME mpn_sec_div_qr
 #define FNAME_itch mpn_sec_div_qr_itch
 #define Q(q) q,
+#define RETTYPE mp_limb_t
 #endif
 #if OPERATION_sec_div_r
 #define FNAME mpn_sec_div_r
 #define FNAME_itch mpn_sec_div_r_itch
 #define Q(q)
+#define RETTYPE void
 #endif
 
 mp_size_t
@@ -56,7 +54,7 @@ FNAME_itch (mp_size_t nn, mp_size_t dn)
 #endif
 }
 
-void
+RETTYPE
 FNAME (Q(mp_ptr qp)
        mp_ptr np, mp_size_t nn,
        mp_srcptr dp, mp_size_t dn,
@@ -84,6 +82,23 @@ FNAME (Q(mp_ptr qp)
       np2 = tp + dn;				/* (nn + 1) limbs */
       cy = mpn_lshift (np2, np, nn, cnt);
       np2[nn++] = cy;
+
+      d0 = dp2[dn - 1];
+      d0 += (~d0 != 0);
+      invert_limb (inv32, d0);
+
+      /* We add nn + dn to tp here, not nn + 1 + dn, as expected.  This is
+	 since nn here will have been incremented.  */
+#if OPERATION_sec_div_qr
+      qh = mpn_sec_pi1_div_qr (np2 + dn, np2, nn, dp2, dn, inv32, tp + nn + dn);
+      ASSERT (qh == 0);		/* FIXME: this indicates inefficiency! */
+      MPN_COPY (qp, np2 + dn, nn - dn - 1);
+      qh = np2[nn - 1];
+#else
+      mpn_sec_pi1_div_r (np2, nn, dp2, dn, inv32, tp + nn + dn);
+#endif
+
+      mpn_rshift (np, np2, dn, cnt);
     }
   else
     {
@@ -92,27 +107,21 @@ FNAME (Q(mp_ptr qp)
 	 assume nn > dn.  */
       dp2 = (mp_ptr) dp;
       np2 = np;
+
+      d0 = dp2[dn - 1];
+      d0 += (~d0 != 0);
+      invert_limb (inv32, d0);
+
+      /* We add nn + dn to tp here, not nn + 1 + dn, as expected.  This is
+	 since nn here will have been incremented.  */
+#if OPERATION_sec_div_qr
+      qh = mpn_sec_pi1_div_qr (qp, np2, nn, dp2, dn, inv32, tp + nn + dn);
+#else
+      mpn_sec_pi1_div_r (np2, nn, dp2, dn, inv32, tp + nn + dn);
+#endif
     }
 
-  d0 = dp2[dn - 1];
-  d0 += (~d0 != 0);
-  invert_limb (inv32, d0);
-
-  /* We add nn + dn to tp here, not nn + 1 + dn, as expected.  This is since nn
-     here will have been incremented.  */
 #if OPERATION_sec_div_qr
-  qh = mpn_sec_pi1_div_qr (qp, np2, nn, dp2, dn, inv32, tp + nn + dn);
-#else
-  mpn_sec_pi1_div_r (np2, nn, dp2, dn, inv32, tp + nn + dn);
-#endif
-
-  if (cnt == 0)
-    ;				/* we have np = np2 here. */
-  else
-    mpn_rshift (np, np2, dn, cnt);
-
-#if OPERATION_sec_div_qr
-  if (cnt == 0)
-    qp[nn - dn] = qh;
+  return qh;
 #endif
 }
